--- a/client/android/divkit-demo-app/src/main/assets/application/settings.json
+++ b/client/android/divkit-demo-app/src/main/assets/application/settings.json
@@ -579,6 +579,25 @@
                             ]
                         },
                         {
+                          "type": "settings_item",
+                          "items": [
+                            {
+                              "type": "settings_item_title",
+                              "text": "Limit image bitmap size enabled"
+                            },
+                            {
+                              "type": "setting_switch_state",
+                              "id": "limit_image_bitmap_size_enabled",
+                              "active_click_log_id": "set_limit_image_bitmap_size_enabled_disabled",
+                              "active_click_change_state_url": "div-action://set_state?state_id=0/limit_image_bitmap_size_enabled/inactive",
+                              "active_click_change_settings_url": "div-action://set_preferences?name=limit_image_bitmap_size_enabled&value=0",
+                              "inactive_click_log_id": "set_limit_image_bitmap_size_enabled",
+                              "inactive_click_change_settings_url": "div-action://set_preferences?name=limit_image_bitmap_size_enabled&value=1",
+                              "inactive_click_change_state_url": "div-action://set_state?state_id=0/limit_image_bitmap_size_enabled/active"
+                            }
+                          ]
+                        },
+                        {
                             "type": "settings_category",
                             "text": "Theme",
                             "visibility": "gone"
