--- a/client/android/div-tests.gradle
+++ b/client/android/div-tests.gradle
@@ -28,16 +28,10 @@ android {
 
 dependencies {
     testImplementation libs.androidx.test.core
-    testImplementation(libs.junit) {
-        exclude group: "org.hamcrest", module: "hamcrest-core"
-    }
-    testImplementation libs.hamcrest.junit
+    testImplementation libs.fest.reflect
+    testImplementation libs.junit
+    testImplementation libs.kotlin.corountines.test
     testImplementation libs.mockito.core
     testImplementation libs.mockito.kotlin
     testImplementation libs.robolectric
-    testImplementation libs.fest.reflect
-    testImplementation(libs.fest.android) {
-        exclude module: "support-v4"
-    }
-    testImplementation libs.kotlin.corountines.test
 }
