Fixed unhandled exceptions in SvgDivImageLoader commit_hash:f58fd353a20440af3b6c258c86d6ff1b11e9b952

--- a/client/android/div-svg/build.gradle
+++ b/client/android/div-svg/build.gradle
@@ -10,15 +10,13 @@ android {
 
 dependencies {
     implementation project(path: ':div-core')
+    implementation project(path: ':logging')
 
     implementation libs.androidsvg.aar
-
-    implementation libs.androidx.coreKtx
     implementation libs.androidx.core
-
-    implementation libs.kotlin.corountines.core
+    implementation libs.androidx.coreKtx
     implementation libs.kotlin.corountines.android
-    
+    implementation libs.kotlin.corountines.core
     implementation libs.okhttp
 }
 
