Removed redundant gradle script commit_hash:0acddb4982fadcb367712a02199c1d65415a7fca

--- a/client/android/divkit-demo-app/build.gradle
+++ b/client/android/divkit-demo-app/build.gradle
@@ -7,7 +7,7 @@ plugins {
     alias(libs.plugins.screenshotTestPlugin)
 }
 
-apply from: "${project.projectDir}/../div-application.gradle"
+apply from: "${project.projectDir}/../div-common.gradle"
 apply from: "${project.projectDir}/../div-tests.gradle"
 apply from: "ui-tests.gradle"
 
