--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -25,6 +25,7 @@ include ':api-generator-test'
 include ':assertion'
 include ':beacon'
 include ':coil'
+include ':compose'
 include ':compose-interop'
 include ':div'
 include ':div-core'
@@ -45,6 +46,7 @@ include ':div-states'
 include ':div-storage'
 include ':div-svg'
 include ':div-video'
+include ':div-video-m3'
 include ':divkit-demo-app'
 include ':divkit-perftests'
 include ':divkit-regression-testing'
@@ -59,7 +61,6 @@ include ':screenshot-test-runtime'
 include ':ui-test-common'
 include ':utils'
 include ':video-custom'
-include ':div-video-m3'
 
 def internalSettings = file("settings.internal.gradle")
 if (internalSettings.exists()) {
