--- a/client/android/compose-interop/build.gradle
+++ b/client/android/compose-interop/build.gradle
@@ -1,7 +1,7 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    alias(libs.plugins.compose.compiler)
+    alias(libs.plugins.kotlin.compose)
 }
 
 apply from: "${project.projectDir}/../div-library.gradle"
