add standalone benchmark-app to track library size commit_hash:e4b25f3720b061792a41c9e4f0566f88ecff21b3

--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -28,6 +28,7 @@ include ':coil'
 include ':compose'
 include ':compose-interop'
 include ':div'
+include ':divkit-benchmark-app'
 include ':div-core'
 include ':div-data'
 include ':div-evaluable'
